# Print-Numbers

./: CMakeLists.txt  Makefile  main.cpp  main_test.cc  number_printer.hpp  number_printer_test.cc  number_printer_test.cpp  print_Test.hpp  readme.md
.ccls-cache/@@home@runner@Program-0-Print-Numbers/: @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@__stddef_max_align_t.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdarg.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stddef.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdint.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@backward@binders.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@alloc_traits.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@allocator.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@basic_ios.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@basic_ios.tcc.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@basic_string.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@basic_string.tcc.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@char_traits.h.blob  (+164 more)
.ccls-cache/@home@runner@Program-0-Print-Numbers/: main.cpp  main.cpp.blob
(+2 files in other folders)
